@@ -113,6 +113,7 @@ Version 1.11.7+dev:
    * Fixed file chooser dialog (used in the map editor and for locating the
      wesnothd executable) interpreting special markup at the beginning of file
      names such as "#foo.map".
+   * Fixed bug with modifications dependency check dialogs (bug #21365)
 
 Version 1.11.7:
  * Add-ons client:
